tests/ui/consts/uninhabited-static-reject.stderr
error: static of uninhabited type
  --> $DIR/uninhabited-static-reject.rs:11:1
   |
LL | static VOID: Void = VOID;
   | ^^^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #74840 <https://github.com/rust-lang/rust/issues/74840>
note: the lint level is defined here
  --> $DIR/uninhabited-static-reject.rs:7:9
   |
LL | #![deny(uninhabited_static)]
   |         ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

